--- a/src/web/style.css
+++ b/src/web/style.css
@@ -89,3 +89,15 @@ p {
   display: table;
   margin-bottom: 20px;
 }
+
+.link-email {
+  padding: 10px;
+  display: table;
+  margin: 0 auto;
+  margin-bottom: 150px;
+}
+
+.contact-message {
+  text-align: center;
+  padding: 0;
+}
